--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
 
+  first release
+
 <header class="navbar">
   <div class="container">
     <div class="default" ng-hide="menuSettings">
