--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
   first release
 
+  enhanced release
+
 <header class="navbar">
   <div class="container">
     <div class="default" ng-hide="menuSettings">
